deps/v8/test/message/arrow-invalid-rest-2.out
*%(basename)s:7: SyntaxError: Rest parameter must be an identifier or destructuring pattern
var f = (a, ...x = 10) => x;
            ^^^^^^^^^
SyntaxError: Rest parameter must be an identifier or destructuring pattern
